## Version 1.3.5

- Minor documentation change removing links to ggplot2 documenation
that no longer exists from version 2.0.0.

## Version 1.3.4

- Internally, `melt` is loaded from the data.table package rather than
reshape2 (which is no longer a dependency). This should provide speed
improvements.

## Version 1.3.3

- `coxsimInteract` can now handle interactions with categorical variables.

## Version 1.3.2

- Minor internal changes to `SurvExpand` that improves speed and stability.

## Version 1.3.1

- Add citation to JSS article.

    Gandrud, Christopher. 2015. simPH: An R Package for Illustrating Estimates
    from Cox Proportional Hazard Models Including for Interactive and Nonlinear
    Effects. Journal of Statistical Software. 65(3)1-20.

## Version 1.3

- !!!!NOTE!!!!: This version alters default behaviour and
functionality in a way that could break your code.

- `simGG` now includes rug plots.

    + Note that for `simGG.simtvc` that rug plots are not produced. All x-axes
are "Time".

- `simGG` default type is now `ribbons`, rather than `points`.

- For `simGG` plots with a covariate represented on the x-axis,
the variable name is printed by default on the plot.

- `as.data.frame.coxsim` added to convert the output of a coxsim function to
a data frame

- `simGG.simspline` no longer supports scatter3d plots for Hazard Rates.

- Bug fixes in `simGG.simspline` with Hazard Rates.

- Minor internal code and documentation improvements.

## Version 1.2.6.1

Trivial README.md change to address CRAN Markdown processor issue.

## Version 1.2.6

- No longer depends on DataCombine.

- Minor documentation improvements.

## Version 1.2.5

- Minor documentation and internal code improvements.

## Version 1.2.4

- Bug fix for `coxsimSpline` where the `SimID` was not correctly identified.

Addressed minor bug in `SurvExpand` from data.table.

## Version 1.2.3

- Minor changes to `SurvExpand` to work with dplyr 0.3.

- Now requires dplyr 0.3.
