@@ -5,7 +5,7 @@ simPH
 
 ### Christopher Gandrud
 
-### Version 1.3.4 [![Build Status](https://travis-ci.org/christophergandrud/simPH.png)](https://travis-ci.org/christophergandrud/simPH) ![CRAN Downloads](http://cranlogs.r-pkg.org/badges/last-month/simPH)
+### Version 1.3.5 [![Build Status](https://travis-ci.org/christophergandrud/simPH.png)](https://travis-ci.org/christophergandrud/simPH) ![CRAN Downloads](http://cranlogs.r-pkg.org/badges/last-month/simPH)
 
 #### Please report any bugs to:
 
